--- a/RazorMegaDesk/Pages/Desks/Edit.cshtml
+++ b/RazorMegaDesk/Pages/Desks/Edit.cshtml
@@ -54,7 +54,13 @@
             <div class="form-group">
                 <span class="text-danger">*</span>
                 <label asp-for="Desk.RushDays" class="control-label"></label>
-                <input asp-for="Desk.RushDays" class="form-control" />
+                <select asp-for="Desk.RushDays" class="form-control">
+                    <option value="Standard">Standard (14 Day)</option>
+                    <option value="ThreeDay">3 Day</option>
+                    <option value="FiveDay">5 Day</option>
+                    <option value="SevenDay">7 Day</option>
+                </select>
+
                 <span asp-validation-for="Desk.RushDays" class="text-danger"></span>
             </div>
             <div class="form-group">
