--- a/RazorMegaDesk/Pages/Shared/_Layout.cshtml.css
+++ b/RazorMegaDesk/Pages/Shared/_Layout.cshtml.css
@@ -46,3 +46,14 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+.btn-secondary {
+    background-color: #6c757d;
+    border-color: #6c757d;
+    color: white;
+}
+
+.btn-warning {
+    background-color: #ffc107;
+    border-color: #ffc107;
+    color: white;
+}
