--- a/RazorMegaDesk/Pages/Desks/Create.cshtml
+++ b/RazorMegaDesk/Pages/Desks/Create.cshtml
@@ -10,8 +10,8 @@
 
 <h4>Desk</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -41,14 +41,13 @@
             <div class="form-group">
                 <span class="text-danger">*</span>
                 <label asp-for="Desk.Material" class="control-label"></label>
-				<select asp-for="Desk.Material" class="form-control">
-					<option value="Laminate">Laminate</option>
-					<option value="Oak">Oak</option>
-					<option value="Rosewood">Rosewood</option>
-					<option value="Veneer">Veneer</option>
-					<option value="Pine">Pine</option>
-				</select>
-
+                <select asp-for="Desk.Material" class="form-control">
+                    <option value="Laminate">Laminate</option>
+                    <option value="Oak">Oak</option>
+                    <option value="Rosewood">Rosewood</option>
+                    <option value="Veneer">Veneer</option>
+                    <option value="Pine">Pine</option>
+                </select>
                 <span asp-validation-for="Desk.Material" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -60,21 +59,20 @@
                     <option value="FiveDay">5 Day</option>
                     <option value="SevenDay">7 Day</option>
                 </select>
-
                 <span asp-validation-for="Desk.RushDays" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+        <div class="form-group">
+            <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
