--- a/RazorMegaDesk/Pages/Desks/Edit.cshtml
+++ b/RazorMegaDesk/Pages/Desks/Edit.cshtml
@@ -9,8 +9,8 @@
 
 <h4>Desk</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Desk.Id" />
@@ -48,7 +48,6 @@
                     <option value="Veneer">Veneer</option>
                     <option value="Pine">Pine</option>
                 </select>
-
                 <span asp-validation-for="Desk.Material" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -60,20 +59,20 @@
                     <option value="FiveDay">5 Day</option>
                     <option value="SevenDay">7 Day</option>
                 </select>
-
                 <span asp-validation-for="Desk.RushDays" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
+        <div class="form-group">
+            <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
