--- a/RazorMegaDesk/wwwroot/css/site.css
+++ b/RazorMegaDesk/wwwroot/css/site.css
@@ -33,3 +33,53 @@ header nav {
 dive .navbar-brand {
     color:white;
 }
+.deskmanager-options {
+    position: relative;
+    bottom: 0;
+    margin-top:1em;
+}
+
+.table td, .table th {
+    border: none;
+    padding: 8px;
+}
+.table tbody tr td {
+    border-left: 1px dotted white;
+    border-right: 1px dotted white;
+}
+.table tbody tr td:first-child {
+    border-left: none
+}
+.table tbody tr td:last-child{
+    border-right:none
+}
+
+.deskmanager-table tbody tr {
+    background-color: var(--secondary-color);
+    color: white;
+    margin-top:.5em;
+    margin-bottom:.5em;
+}
+.table tbody tr:nth-child(odd) {
+    border-bottom: 1px dotted white;
+}
+.table tbody tr:nth-child(even) {
+    border-bottom: 2px solid white;
+}
+
+.deskmanager-item-btns {
+    display:flex;
+    justify-content:space-around;
+    width:100%;
+}
+
+.filter-sort{
+    display:flex;
+    justify-content:space-between;
+}
+
+@media (max-width: 600px) {
+    .filter-sort{
+        flex-wrap:wrap;
+    }
+}
