--- a/RazorMegaDesk/Pages/Index.cshtml
+++ b/RazorMegaDesk/Pages/Index.cshtml
@@ -8,3 +8,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<div class="home-options">
+    <button class="btn btn-secondary" onclick="location.href+='Desks/Create'">Add Quote</button>
+    <button class="btn btn-primary" onclick="location.href+='Desks'">View Quotes</button>
+</div>
