--- a/RazorMegaDesk/Pages/Desks/Delete.cshtml
+++ b/RazorMegaDesk/Pages/Desks/Delete.cshtml
@@ -5,12 +5,12 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 class="text-center">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-center">Are you sure you want to delete this?</h3>
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h4>Desk</h4>
+        <h4 class="text-center">Desk</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-4">
@@ -62,7 +62,7 @@
                 @Html.DisplayFor(model => model.Desk.Price)
             </dd>
         </dl>
-        <form method="post">
+        <form method="post" class="deskmanager-edit-btns">
             <input type="hidden" asp-for="Desk.Id" />
             <input type="submit" value="Delete" class="btn btn-danger" />
             <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
