--- a/RazorMegaDesk/Pages/Desks/Details.cshtml
+++ b/RazorMegaDesk/Pages/Desks/Details.cshtml
@@ -5,11 +5,11 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1 class="text-center">Details</h1>
 
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h4>Desk</h4>
+        <h4 class="text-center">Desk</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-4">
@@ -61,7 +61,7 @@
                 @Html.DisplayFor(model => model.Desk.Price)
             </dd>
         </dl>
-        <div class="form-group">
+        <div class="form-group deskmanager-edit-btns">
             <a asp-page="./Edit" asp-route-id="@Model.Desk.Id" class="btn btn-warning">Edit</a>
             <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
         </div>
