--- a/RazorMegaDesk/Pages/Desks/Index.cshtml
+++ b/RazorMegaDesk/Pages/Desks/Index.cshtml
@@ -10,7 +10,7 @@
 <form class="filter-sort">
     <p>
         <label>Search Name: <input type="text" asp-for="SearchString" /></label>
-        <input type="submit" value="Search" />
+        <input class="deskmanager-btn" type="submit" value="Search" />
     </p>
     <p>
         <label>
@@ -82,13 +82,13 @@
         <tr>
             <td colspan="8">
                 <div class="deskmanager-item-btns">
-                    <button class="btn btn-primary" onclick="window.location.href='@Url.Page("./Edit", new { id = item.Id })'">
+                    <button class="btn deskmanager-btn" onclick="window.location.href='@Url.Page("./Edit", new { id = item.Id })'">
                         Edit
                     </button>
-                    <button class="btn btn-primary" onclick="window.location.href='@Url.Page("./Details", new { id = item.Id })'">
+                    <button class="btn deskmanager-btn" onclick="window.location.href='@Url.Page("./Details", new { id = item.Id })'">
                         Details
                     </button>
-                    <button class="btn btn-primary" onclick="window.location.href='@Url.Page("./Delete", new { id = item.Id })'">
+                    <button class="btn deskmanager-btn" onclick="window.location.href='@Url.Page("./Delete", new { id = item.Id })'">
                         Delete
                     </button>
                 </div>
@@ -99,5 +99,5 @@
 </table>
 </div>
 <div class="deskmanager-options">
-    <button onclick="location.href+='/Create'">Create New</button>
+    <button class="btn btn-primary" onclick="location.href+='/Create'">Create New</button>
 </div>
