--- a/RazorMegaDesk/wwwroot/css/site.css
+++ b/RazorMegaDesk/wwwroot/css/site.css
@@ -78,8 +78,57 @@ dive .navbar-brand {
     justify-content:space-between;
 }
 
-@media (max-width: 600px) {
-    .filter-sort{
-        flex-wrap:wrap;
+.deskmanager-id-btns{
+    margin-top:1em;
+    display:flex;
+    justify-content:space-around;
+}
+
+.deskmanager-edit-btns {
+    margin-top: 1em;
+    display: flex;
+    gap:1.5em;
+    justify-content:start;
+}
+
+.home-options{
+    display:flex;
+    flex-direction:column;
+    width:60%;
+    gap:1em;
+    margin:auto;
+}
+.home-options *{
+    border-radius:1em;
+}
+.deskmanager-btn {
+    color: #fff;
+    background-color: var(--highlight-color);
+    border-color: var(--highlight-color);
+}
+
+    @media (max-width: 600px) {
+        .filter-sort {
+            flex-wrap: wrap;
+        }
+    }
+
+@media (min-width: 600px) {
+    .deskmanager-form-field {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 37.5% 62.5%;
+    }
+    .deskmanager.deskmanager-form-field label{
+        
+    }
+
+    .deskmanager-form-field div{
+        display:flex;
+        gap:.2rem;
+    }
+    .deskmanager-form-field span:nth-of-type(1){
+        grid-column:1/3;
+        margin-bottom:.5em;
     }
 }
