--- a/RazorMegaDesk/Pages/Index.cshtml
+++ b/RazorMegaDesk/Pages/Index.cshtml
@@ -9,6 +9,6 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 <div class="home-options">
-    <button class="btn btn-secondary" onclick="location.href+='Desks/Create'">Add Quote</button>
-    <button class="btn btn-primary" onclick="location.href+='Desks'">View Quotes</button>
+    <a asp-page="./Desks/Create" class="btn btn-secondary">Add Quote</a>
+    <a asp-page="./Desks/Index" class="btn btn-primary">View Quotes</a>
 </div>
